WEB-2444 Fixed alignment of configured orgs in event kpi widget

--- a/fid-web/src/main/webapp/style/dashboard/widgetconfig.css
+++ b/fid-web/src/main/webapp/style/dashboard/widgetconfig.css
@@ -68,6 +68,7 @@
     overflow:hidden;
     padding-top: 10px;
     padding-bottom:10px;
+    padding-left: 110px;
 }
 
 .removeOrgImage {
